--- a/yunjin/mainDetail.html
+++ b/yunjin/mainDetail.html
@@ -8,11 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
     <link rel="stylesheet" href="config.css">
     <script src="./assets/config.js"></script>
-
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
 </head>
-
 <body>
     <div class="relative content bg-g-50 border-white">
         <nav class="bg-white border-gray-200">
@@ -61,43 +59,52 @@
       </div>
     </div>
   </div>
-    
+
   <!--댓글-->
-  <div><div class="flex items-center justify-start text-start">
-    <div class="font-medium text-lg mt-3 ml-7 mr-1">댓글</div>
+ 
+  <div class="flex items-center justify-start text-start">
+    <div class="font-medium text-lg mt-3 ml-4 mr-1">댓글</div>
     <div class="font-bold  text-lg mt-3 mr-5">2</div>
  </div>
- <div class="flex items-center justify-center"><div class="input-box mt-2 relative ">
-     <input type="number" id="verificationCode" name="verificationCode" placeholder="재난관련 제보, 주의사항을 주변인과 나눠보세요." class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
-     <button id="verifyButton" type="button" class="absolute right-2 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-medium text-sm">입력</button>
- </div>  </div>
-
-
-
+ <div class="flex items-center justify-center">
+  <div class="input-box mt-2 relative">
+    <input type="number" id="verificationCode" name="verificationCode" placeholder="재난관련 제보를 주변인과 나눠보세요." class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required style ="margin-left: -30px;">
+    <button id="verifyButton" type="button" class="absolute right-2 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-medium text-sm">입력</button>
+    <input type="file" id="imageUpload" class="hidden" /> 
+    <div class="flex justify-end mt-3" style="margin-top: -42px; margin-left: -10px;"> 
+      <div class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" style="margin-right: 3rem;"> 
+        <svg class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8.5 10C9.32843 10 10 9.32843 10 8.5C10 7.67157 9.32843 7 8.5 7C7.67157 7 7 7.67157 7 8.5C7 9.32843 7.67157 10 8.5 10Z" fill="#0F1729" />
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0055 2H12.9945C14.3805 1.99999 15.4828 1.99999 16.3716 2.0738C17.2819 2.14939 18.0575 2.30755 18.7658 2.67552C19.8617 3.24477 20.7552 4.1383 21.3245 5.23415C21.6925 5.94253 21.8506 6.71811 21.9262 7.62839C22 8.5172 22 9.61946 22 11.0054V12.9945C22 13.6854 22 14.306 21.9909 14.8646C22.0049 14.9677 22.0028 15.0726 21.9846 15.175C21.9741 15.6124 21.9563 16.0097 21.9262 16.3716C21.8506 17.2819 21.6925 18.0575 21.3245 18.7658C20.7552 19.8617 19.8617 20.7552 18.7658 21.3245C18.0575 21.6925 17.2819 21.8506 16.3716 21.9262C15.4828 22 14.3805 22 12.9946 22H11.0055C9.61955 22 8.5172 22 7.62839 21.9262C6.71811 21.8506 5.94253 21.6925 5.23415 21.3245C4.43876 20.9113 3.74996 20.3273 3.21437 19.6191C3.20423 19.6062 3.19444 19.5932 3.185 19.5799C2.99455 19.3238 2.82401 19.0517 2.67552 18.7658C2.30755 18.0575 2.14939 17.2819 2.0738 16.3716C1.99999 15.4828 1.99999 14.3805 2 12.9945V11.0055C1.99999 9.61949 1.99999 8.51721 2.0738 7.62839C2.14939 6.71811 2.30755 5.94253 2.67552 5.23415C3.24477 4.1383 4.1383 3.24477 5.23415 2.67552C5.94253 2.30755 6.71811 2.14939 7.62839 2.0738C8.51721 1.99999 9.61949 1.99999 11.0055 2ZM20 11.05V12.5118L18.613 11.065C17.8228 10.2407 16.504 10.2442 15.7182 11.0727L11.0512 15.9929L9.51537 14.1359C8.69326 13.1419 7.15907 13.1746 6.38008 14.2028L4.19042 17.0928C4.13682 16.8463 4.09606 16.5568 4.06694 16.2061C4.0008 15.4097 4 14.3905 4 12.95V11.05C4 9.60949 4 8.59025 4.06694 7.79391C4.13208 7.00955 4.25538 6.53142 4.45035 6.1561C4.82985 5.42553 5.42553 4.82985 6.1561 4.45035C6.53142 4.25538 7.00955 4.13208 7.79391 4.06694C8.59025 4.0008 9.60949 4 11.05 4H12.95C14.3905 4 15.4097 4.0008 16.2061 4.06694C16.9905 4.13208 17.4686 4.25538 17.8439 4.45035C18.5745 4.82985 19.1702 5.42553 19.5497 6.1561C19.7446 6.53142 19.8679 7.00955 19.9331 7.79391C19.9992 8.59025 20 9.60949 20 11.05ZM6.1561 19.5497C5.84198 19.3865 5.55279 19.1833 5.295 18.9467L7.97419 15.4106L9.51005 17.2676C10.2749 18.1924 11.6764 18.24 12.5023 17.3693L17.1693 12.449L19.9782 15.3792C19.9683 15.6812 19.9539 15.9547 19.9331 16.2061C19.8679 16.9905 19.7446 17.4686 19.5497 17.8439C19.1702 18.5745 18.5745 19.1702 17.8439 19.5497C17.4686 19.7446 16.9905 19.8679 16.2061 19.9331C15.4097 19.9992 14.3905 20 12.95 20H11.05C9.60949 20 8.59025 19.9992 7.79391 19.9331C7.00955 19.8679 6.53142 19.7446 6.1561 19.5497Z" fill="#0F1729" />
+        </svg>
+      </div>
+    </div>
+  </div>
+</div>
  <!--댓글 박스-->
- <div id = "comment">
+ <div id = "comment" >
     <div class="flex items-center justify-center text-start">
-        <div class="h-28 w-80 mt-2 p-3 text-sm text-start">
+        <div class="h-48 w-80 mt-2 p-3 text-sm text-start" style ="margin-left: -34px;">
           <div class="flex items-center justify-start">
-            <div class="font-bold"></div>
-            <div class="text-grey-600 font-medium text-sm ml-5"></div>
+            <div class="font-bold">인천광역시 부평구 삼산 2동</div>
+            <div class="text-grey-600 font-medium text-sm ml-5">강**</div>
           </div>
           <div class="flex items-start justify-center text-black text-base mt-2">
-            
+           역곡천 주변 여울교는 이미 잠겼어요. 주의하세요. 
           </div>
+          <div id = "inputPhoto" class ="flex items-center justify-center w-78 h-20 border border-gray-400 mb-1 mt-2">사진</div>
           <div class="flex items-center justify-start">
-            <div class="font-medium text-xs mt-1 mr-12"></div>
+            <div class="font-medium text-xs mt-1 ml-5 mr-11">2023=07-02 오전 02:26 </div>
             <!--도움돼요, 싫어요 버튼-->
-            <div class="font-light text-xs mt-1 mr-2" id="helpfulCount1"></div>
-            <div class="font-light text-xs mt-1" id="dislikeCount1"></div>
+            <div class="font-light text-xs mt-1 mr-2" id="helpfulCount1">좋아요 3</div>
+            <div class="font-light text-xs mt-1" id="dislikeCount1">싫어요 2</div>
           </div>
         </div>
       </div>
     <!--밑줄-->
-    <div class="w-80 h-px bg-gray-400 my-2 mt-5 ml-4"></div>
+    <div class="flex items-center justify-center w-80 h-px bg-gray-400 my-2 mt-5" ></div>
  </div>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="js/mainDetail.js"></script>
 </body>
-
 </html>
