--- a/myoungjin/html/alarm.html
+++ b/myoungjin/html/alarm.html
@@ -53,7 +53,7 @@
             </div>
 
             <!--main-->
-            <div id="alarm_message" class="flex flex-wrap mb-4">
+            <div id="alarm_message" class="flex-wrap mb-4">
                 <!-- <div class="pb-2 border-b-2 mt-4"> 
                     <div class="flex space-x-40 ml-3 space-x-16">
                         <div class="font-bold text-xl mb-1 mr-4">경기도청 알림</div>
