--- a/myoungjin/html/map.html
+++ b/myoungjin/html/map.html
@@ -36,7 +36,7 @@
             </nav>
 
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0 shadow-md">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0 shadow-md text-lg">
                     <div>
                         <a href="#">홈</a>
                         <div class="bg-mySky p-1 h-3"></div>
@@ -68,9 +68,10 @@
                             class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위</button>
                     </div>
 
-                    <div id="map" style="width: 100%; height: 60vh;"></div>
+                    <div id="map" style="width: 100%; height: 72vh;"></div>
                 </div>
-                <div id="modal" class="bg-white" style="display:none;">
+                <!-- <div id="modal" class="bg-white" style="display:none;"> -->
+                <div id="modal" class="bg-white">
                     <!-- <div class="modal-window"> -->
                         <div class="close-area">
                             <button>
@@ -82,13 +83,13 @@
                             </button>
                         </div>
                         <div class="content">
-                            <!-- <div>보람아파트 지하주차장 대피소</div>
+                            <div>보람아파트 지하주차장 대피소</div>
                             <div><button
                                     class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위
                                     대피시설</button></div>
                             <div>
                                 <div><span>인천광역시 부평구 굴포로 158</span><button class="ml-2">복사</button></div>
-                            </div> -->
+                            </div>
                         </div>
                     <!-- </div> -->
                 </div>
