--- a/checklist.html
+++ b/checklist.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-
-    <title>삐용</title>
-    <link rel="stylesheet" href="../css/config.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB12bgQnvBrc0Hwuztjrqpxvv7vEHvcf0U"></script>
     <script src="./js/checklist.js"></script>
+
+    <link rel="stylesheet" href="../css/config.css" />
+    <title>삐용</title>
   </head>
 
   <body>
@@ -67,7 +69,7 @@
 
       <div class="recent-message block bg-yellow-100 mb-5">
         <p class="text-base text-center p-2 m-3">
-          인천광역시에서 <br />
+          <span id="current_city"></span>에서 <br />
           가장 최근에 온 재난 메세지는 <br />
           <span class="font-bold">호우 관련 </span>입니다.
         </p>
